hphp/hack/test/typecheck/variadic_parameters.php.exp
File "variadic_parameters.php", line 8, characters 3-42:
Attributes on variadic parameters are not allowed (Parsing[1002])
